--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "framer-motion": "^11.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
