--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.5.6",
+    "ms": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
@@ -22,6 +23,7 @@
     "react-query": "^3.39.3"
   },
   "devDependencies": {
+    "@types/ms": "^0.7.34",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
